# qml_boilerplate

./: CMakeLists.txt
contrib/: conanfile.txt  configure.py  make.py
contrib/qt/: conanfile.py
src/: CMakeLists.txt  main.cpp  sources.cmake
src/ui/: MainWindow.qml
